Finished the home page html and css

--- a/index.html
+++ b/index.html
@@ -13,28 +13,164 @@
 </head>
 
 <body>
-    <header class="hero">
-        <div id="navbar" class="navbar">
-            <h1 class="logo">
-                <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#cases">Cases</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+    <main>
+        <header class="hero">
+            <div id="navbar" class="navbar">
+                <h1 class="logo">
+                    <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
+                </h1>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#cases">Cases</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
 
-        <div class="content">
-            <h1>The Sky Is The Limit</h1>
-            <p>We provide world lass financial assistance</p>
-            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> 1.6Read More</a>
+            <div class="content">
+                <h1>The Sky Is The Limit</h1>
+                <p>We provide world lass financial assistance</p>
+                <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+            </div>
+        </header>
+
+        <section class="middle-section">
+            <div class="box">
+                <div class="box-img">
+                    <i class="fas fa-university fa-2x icon"></i>
+                </div>
+                <h3>Investment Banking</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, adipisci. Sunt saepe nisi eos
+                    qui.
+                </p>
+            </div>
+            <div class="box">
+                <div class="box-img">
+                    <i class="fas fa-book-reader fa-2x icon"></i>
+                </div>
+                <h3>Portfolio Management</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, adipisci. Sunt saepe nisi eos
+                    qui.
+                </p>
+            </div>
+            <div class="box">
+                <div class="box-img">
+                    <i class="fas fa-pencil-alt fa-2x icon"></i>
+                </div>
+                <h3>Tax & Custodial</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, adipisci. Sunt saepe nisi eos
+                    qui.
+                </p>
+            </div>
+        </section>
+
+        <section class="info">
+            <div class="info-img"></div>
+            <div class="info-content">
+                <p>What you are looking for</p>
+                <h1>We provide bespoke solutions</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab deleniti ex, quibusdam inventore
+                    doloribus
+                    accusantium beatae neque fuga, quidem dolore numquam labore maxime esse voluptatibus ipsum! Quidem
+                    debitis facere eaque?</p>
+                <a href="#about" class="btn-outline"><i class="fas fa-chevron-right"></i> Read More</a>
+            </div>
+        </section>
+
+        <section id="cases" class="cases flex-grid section-padding">
+            <header class="section-header">
+                <h4>This is what we do</h4>
+                <h2>Business Cases</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, harum.</p>
+            </header>
+            <div class="row">
+                <div class="column">
+                    <img src="./img/cases/cases1.jpg" alt="case">
+                    <img src="./img/cases/cases2.jpg" alt="case">
+                </div>
+                <div class="column">
+                    <img src="./img/cases/cases3.jpg" alt="case">
+                    <img src="./img/cases/cases4.jpg" alt="case">
+                </div>
+                <div class="column">
+                    <img src="./img/cases/cases5.jpg" alt="case">
+                    <img src="./img/cases/cases6.jpg" alt="case">
+                </div>
+                <div class="column">
+                    <img src="./img/cases/cases7.jpg" alt="case">
+                    <img src="./img/cases/cases8.jpg" alt="case">
+                </div>
+            </div>
+        </section>
+
+        <section id="blog" class="blog">
+            <div class="blog-content">
+                <p>October 14th, 2020</p>
+                <h1>Blog Post One</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit itaque assumenda facilis, cum aut
+                    provident
+                    nihil nemo officiis numquam repudiandae sed consequatur, fugiat distinctio error sint! Alias atque
+                    quos
+                    voluptate ducimus nihil voluptatum excepturi ex magnam, perspiciatis explicabo eos ea quia dicta
+                    velit
+                    perferendis molestias numquam error at porro architecto.</p>
+                <a href="#blog" class="btn-outline"><i class="fas fa-chevron-right"></i> Read Our Blog</a>
+            </div>
+            <div class="blog-img"></div>
+        </section>
+
+        <section id="team" class="team section-padding">
+            <header class="section-header">
+                <h4>Who we are</h4>
+                <h2>Our Professional Team</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, minus in exercitationem cumque
+                    laudantium quas.</p>
+            </header>
+            <div class="team-row">
+                <div class="team-column">
+                    <img src="./img/team/person1.jpg" alt="team">
+                    <p>John Doe</p>
+                    <p>President</p>
+                </div>
+                <div class="team-column">
+                    <img src="./img/team/person2.jpg" alt="team">
+                    <p>Jane Doe</p>
+                    <p>Excecutive Vice President</p>
+                </div>
+                <div class="team-column">
+                    <img src="./img/team/person3.jpg" alt="team">
+                    <p>Steve Smith</p>
+                    <p>Marketing Head</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="info">
+            <div class="contact-img"></div>
+            <div class="contact-content">
+                <h1>Request Callback</h1>
+                <input type="text" placeholder="Enter name">
+                <input type="email" placeholder="Enter email">
+                <input type="text" placeholder="Enter phone">
+                <a href="#about">Send</a>
+            </div>
+        </section>
+    </main>
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+            <p>|</p>
+            <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+            <p>|</p>
+            <a href="#"><i class="fab fa-youtube fa-3x"></i></a>
+            <p>|</p>
+            <a href="#"><i class="fab fa-linkedin fa-3x"></i></a>
         </div>
-    </header>
+        <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
 </body>
 
 </html>
