Adding the Blog oage and the blog post page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>EdgeLedger || Home</title>
 </head>
 
-<body>
+<body id="home">
     <main>
         <header class="hero">
             <div id="navbar" class="navbar">
@@ -67,7 +67,7 @@
             </div>
         </section>
 
-        <section class="info">
+        <section id="about" class="about info">
             <div class="info-img"></div>
             <div class="info-content">
                 <p>What you are looking for</p>
@@ -117,7 +117,7 @@
                     voluptate ducimus nihil voluptatum excepturi ex magnam, perspiciatis explicabo eos ea quia dicta
                     velit
                     perferendis molestias numquam error at porro architecto.</p>
-                <a href="#blog" class="btn-outline"><i class="fas fa-chevron-right"></i> Read Our Blog</a>
+                <a href="blog.html" class="btn-outline"><i class="fas fa-chevron-right"></i> Read Our Blog</a>
             </div>
             <div class="blog-img"></div>
         </section>
@@ -148,7 +148,7 @@
             </div>
         </section>
 
-        <section id="contact" class="info">
+        <section id="contact" class="contact">
             <div class="contact-img"></div>
             <div class="contact-content">
                 <h1>Request Callback</h1>
@@ -161,13 +161,13 @@
     </main>
     <footer class="footer bg-dark">
         <div class="social">
-            <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <p>|</p>
-            <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
             <p>|</p>
-            <a href="#"><i class="fab fa-youtube fa-3x"></i></a>
+            <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
             <p>|</p>
-            <a href="#"><i class="fab fa-linkedin fa-3x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
         </div>
         <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
