--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/lightbox.min.css">
     <link rel="stylesheet" href="./css/utility.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>EdgeLedger || Home</title>
@@ -15,7 +17,7 @@
 <body id="home">
     <main>
         <header class="hero">
-            <div id="navbar" class="navbar">
+            <div id="navbar" class="navbar top">
                 <h1 class="logo">
                     <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span>Ledger
                 </h1>
@@ -88,20 +90,36 @@
             </header>
             <div class="row">
                 <div class="column">
-                    <img src="./img/cases/cases1.jpg" alt="case">
-                    <img src="./img/cases/cases2.jpg" alt="case">
+                    <a href="./img/cases/cases1.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases1.jpg" alt="case">
+                    </a>
+                    <a href="./img/cases/cases2.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases2.jpg" alt="case">
+                    </a>
                 </div>
                 <div class="column">
-                    <img src="./img/cases/cases3.jpg" alt="case">
-                    <img src="./img/cases/cases4.jpg" alt="case">
+                    <a href="./img/cases/cases3.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases3.jpg" alt="case">
+                    </a>
+                    <a href="./img/cases/cases4.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases4.jpg" alt="case">
+                    </a>
                 </div>
                 <div class="column">
-                    <img src="./img/cases/cases5.jpg" alt="case">
-                    <img src="./img/cases/cases6.jpg" alt="case">
+                    <a href="./img/cases/cases5.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases5.jpg" alt="case">
+                    </a>
+                    <a href="./img/cases/cases6.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases6.jpg" alt="case">
+                    </a>
                 </div>
                 <div class="column">
-                    <img src="./img/cases/cases7.jpg" alt="case">
-                    <img src="./img/cases/cases8.jpg" alt="case">
+                    <a href="./img/cases/cases7.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases7.jpg" alt="case">
+                    </a>
+                    <a href="./img/cases/cases8.jpg" data-lightbox="cases">
+                        <img src="./img/cases/cases8.jpg" alt="case">
+                    </a>
                 </div>
             </div>
         </section>
@@ -171,6 +189,32 @@
         </div>
         <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous"></script>
+    <script src="./js/lightbox.min.js"></script>
+    <script>
+        const navbar = document.querySelector("#navbar");
+        let scrolled = false;
+
+        window.onscroll = function () {
+            if (window.pageYOffset > 100) {
+                navbar.classList.remove("top");
+                if (!scrolled) {
+                    navbar.style.transform = "translateY(-70px)";
+                }
+                setTimeout(() => {
+                    navbar.style.transform = "translateY(0px)";
+                    scrolled = true;
+                }, 200)
+            }
+            else {
+                navbar.classList.add("top");
+                scrolled = false;
+            }
+        }
+    </script>
 </body>
 
 </html>
